@@ -1,6 +1,7 @@
 Change Log for OpenXava project
 ===============================
 
+- Method reload() remove from MetaComponent. 
 - MetaComponent has a new boolean property called metaDataCached, to determine if the metadata is cached for that component.
 
 OpenXava 5.6 (2016-10-28)
